--- a/docs/how-to-guides/scaffolding/new-react-application.mdx
+++ b/docs/how-to-guides/scaffolding/new-react-application.mdx
@@ -19,15 +19,15 @@ This feature is available since **v5.13.0**.
 :::tip What you'll learn
 
 - main features of the **New React Application** scaffold
-- how to continue developing on top of the generated application code
+- how to continue developing on top of the created application code
 
 :::
 
 ## Overview
 
-As the name suggests, the **New React Application** scaffold creates a new standalone React application, on top of which you can build [client-side rendered (CSR)](https://developers.google.com/web/updates/2019/02/rendering-on-the-web) applications. This is ideal for secured or non-public-facing applications that do not need to be [SEO](https://developers.google.com/search/docs/beginner/seo-starter-guide?hl=en%2F&visit_id=637648024549328679-3615718033&rd=1) compatible.
+As the name suggests, the **New React Application** scaffold creates a new standalone React application, on top of which you can build new [client-side rendered (CSR)](https://developers.google.com/web/updates/2019/02/rendering-on-the-web) applications. This setup is ideal for secured and non-public-facing applications that do not need to be [SEO](https://developers.google.com/search/docs/beginner/seo-starter-guide?hl=en%2F&visit_id=637648024549328679-3615718033&rd=1) compatible.
 
-The created application consists of a couple of simple pages and examples which makes it possible to quickly get started with building a new frontend application.
+The created application also includes a couple of simple pages and examples which makes it possible to quickly get started with building a new frontend application.
 
 <CenteredImage shadow={false} canEnlarge={false} alt="The New React Application" src={preview} />
 
@@ -41,7 +41,7 @@ Be sure to check the [Development](#development) section below to learn more.
 
 ### Included Examples
 
-Out of the box, the newly created React application contains simple home and not-found (404) pages. These will give you an idea on how to approach solving some of the common requirements:
+Out of the box, the newly created React application includes two simple pages - the **Home** and **Not Found (404)** pages. These will give you an idea on how to approach solving some of the common requirements like:
 
 - organization of files and folders
 - defining application routes
@@ -50,7 +50,7 @@ Out of the box, the newly created React application contains simple home and not
 - importing images
 - and more
 
-Once you start building your application, you can remove them or simply move them into a separate folder, potentially for future reference.
+Once you start building your application, you can remove unnecessary pieces of application code or simply move them into a separate folder, potentially for future reference.
 
 ### Simple Cloud Infrastructure
 
@@ -73,7 +73,7 @@ But, once it's time to deploy it, you can do that as usual, with the [`webiny de
 
 ### Essential Files and Folders
 
-The following are the most essential files and folders that are generated during the scaffolding process.
+The following are the most essential files and folders that are created during the scaffolding process.
 
 ```bash title="New React Application Folder (Some Files Removed for Brevity)"
 ├── code
@@ -121,11 +121,11 @@ Contains plugins, like [`RoutePlugin`](https://github.com/webiny/webiny-js/blob/
 
 #### [`code/src/styles`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/src/styles)
 
-Contains SCSS files that define styles used by your application. And although, out of the box, this is only way to define styles, if you maybe prefer a CSS-in-JS solution, you're always free to add additional libraries.
+Contains SCSS files that define styles used by your application. And although, out of the box, this is the only way to define styles, if you maybe prefer a CSS-in-JS solution, you're always free to add additional libraries.
 
 #### [`code/package.json`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/package.json)
 
-In case you missed it, every Webiny project is organized as a [monorepo](/docs/key-topics/project-organization/monorepo-organization), which can consist of multiple packages. This is the reason why the [`package.json`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/package.json) manifest file exists.
+In case you missed it, every Webiny project is organized as a [monorepo](/docs/key-topics/project-organization/monorepo-organization), which can consist of multiple packages. This is the reason why the [`package.json`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/package.json) manifest file exists. It exists because the `code` folder represents a monorepo [workspace](https://classic.yarnpkg.com/en/docs/workspaces/).
 
 In most cases, this file will only be modified when new NPM packages are added.
 
@@ -135,7 +135,7 @@ Learn more about the monorepo organization in the [Monorepo Organization](/docs/
 
 #### [`pulumi/`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/pulumi)
 
-This is the folder that contains all of the cloud infrastructure code.
+This is the folder that contains all of the cloud infrastructure code. You're free to modify in any way needed.
 
 :::info
 Learn more about Pulumi, the default infrastructure-as-code (IaC) framework Webiny relies on, in the [Infrastructure as code with Pulumi](/docs/key-topics/deployment/iac-with-pulumi) key topic.
@@ -145,11 +145,11 @@ Learn more about Pulumi, the default infrastructure-as-code (IaC) framework Webi
 
 As mentioned above, frontend application development can still be performed locally, on the developer's machine.
 
-Which means no initial deployment is needed. Once you've completed the scaffold's wizard and the files have been generated, in order to start developing, you can simply start by running the [`webiny watch`](/docs/how-to-guides/use-watch-command) command (see below). Only when you actually want to see your application online, you can proceed as usual, by running the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) command.
+Which means no initial deployment is needed. Once you've completed the scaffold's wizard and the files have been created, in order to start developing, you can simply start by running the [`webiny watch`](/docs/how-to-guides/use-watch-command) command (see below). Only when you actually want to see your application online, you can proceed as usual, by running the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) command.
 
 ### Development Using the Watch Command
 
-The most straightforward way to continue developing on top of the generated code would be via the [`webiny watch`](/docs/how-to-guides/use-watch-command) command.
+The most straightforward way to continue developing on top of the created code would be via the [`webiny watch`](/docs/how-to-guides/use-watch-command) command.
 
 In order to get started, from your project root, simply run the following command:
 
@@ -161,9 +161,13 @@ Except starting a local development server and making your React application loc
 
 ### Creating First Pages
 
-Once you've completed the scaffold's wizard and the files have been generated, the first steps would be to start creating new pages, in the similar fashion it's already done with the existing example pages. Simply create a new [`RoutePlugin`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/app/src/plugins/RoutePlugin.tsx#L8) plugins inside of the [`code/src/plugins`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/src/plugins) folder, and start creating your page within it.
+Once you've completed the scaffold's wizard and the files have been created, the first steps would be to start creating new pages, in the similar fashion it's already done with the existing example pages. Simply create a new [`RoutePlugin`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/app/src/plugins/RoutePlugin.tsx#L8) plugins inside of the [`code/src/plugins`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/src/plugins) folder, and start creating your page within it, for example:
 
-Every application has one or more layouts, so you can also start editing the [`code/src/components/Layout.tsx`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/src/components/Layout.tsx). Feel free to remove anything that's not needed. The styles for the layout can be found in the [`code/src/styles/global.scss`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/src/styles/global.scss#L33) file.
+```ts
+kobaja
+```
+
+Furthermore, every application has one or more layouts, so you can also start editing the [`code/src/components/Layout.tsx`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/src/components/Layout.tsx). Feel free to remove anything that's not needed. The styles for the layout can be found in the [`code/src/styles/global.scss`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/src/styles/global.scss#L33) file.
 
 ### Linking the React Application With a GraphQL API
 
@@ -212,7 +216,7 @@ export default {
 };
 ```
 
-So, within both commands, we rely on the deployed GraphQL API (`api`) and its stack output to retrieve the URL over which the GraphQL API is accessible. If needed, additional information can be retrieved too, but remember to export it in the cloud infrastructure code, in [`api/pulumi/dev/index.ts`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cwp-template-aws/template/api/pulumi/dev/index.ts#L127) and [`api/pulumi/prod/index.ts`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cwp-template-aws/template/api/pulumi/prod/index.ts#L133) files.
+As shown, within both commands, we rely on the deployed GraphQL API (`api`) and its stack output to retrieve the URL over which the GraphQL API is accessible. If needed, additional values can be retrieved too, but keep in mind that they need to be exported in the cloud infrastructure code, in [`api/pulumi/dev/index.ts`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cwp-template-aws/template/api/pulumi/dev/index.ts#L127) and [`api/pulumi/prod/index.ts`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cwp-template-aws/template/api/pulumi/prod/index.ts#L133) files.
 
 :::info
 The same steps would have to be followed if we wanted to link our React application with the Headless CMS GraphQL API or maybe with a new standalone GraphQL API, created with the [New GraphQL API](/docs/how-to-guides/scaffolding/new-graphql-api) scaffold. The only thing that would change is the folder that's being passed to the `getStackOutput` function.
@@ -224,9 +228,9 @@ The same steps would have to be followed if we wanted to link our React applicat
 
 No.
 
-The **New React Application** scaffold creates a new standalone React application, on top of which you can build [client-side rendered (CSR)](https://developers.google.com/web/updates/2019/02/rendering-on-the-web) applications. This is ideal for secured or non-public-facing applications that do not need to be [SEO](https://developers.google.com/search/docs/beginner/seo-starter-guide?hl=en%2F&visit_id=637648024549328679-3615718033&rd=1) compatible.
+The **New React Application** scaffold creates a new standalone React application, on top of which you can build [client-side rendered (CSR)](https://developers.google.com/web/updates/2019/02/rendering-on-the-web) applications. This is ideal for secured and non-public-facing applications that do not need to be [SEO](https://developers.google.com/search/docs/beginner/seo-starter-guide?hl=en%2F&visit_id=637648024549328679-3615718033&rd=1) compatible.
 
-If you need something like SSR, then you might look into other frameworks, for example [Next.js](https://nextjs.org/docs/basic-features/pages#server-side-rendering).
+If you need server-side rendering (SSR), then you might want to look into other frameworks, such as [Next.js](https://nextjs.org/docs/basic-features/pages#server-side-rendering).
 
 #### For development purposes, into which environment should I deploy?
 
@@ -242,7 +246,7 @@ You certainly can. You can also add new commands, if need be.
 
 #### How can I add new libraries to the created React application?
 
-In case you missed it, every Webiny project is organized as a [monorepo](/docs/key-topics/project-organization/monorepo-organization), which can consist of multiple packages. This is the reason why the [`code/package.json`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/package.json) manifest file exists.
+In case you missed it, every Webiny project is organized as a [monorepo](/docs/key-topics/project-organization/monorepo-organization), which can consist of multiple packages. This is the reason why the [`code/package.json`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/package.json) manifest file exists. It exists because the `code` folder represents a monorepo [workspace](https://classic.yarnpkg.com/en/docs/workspaces/).
 
 This is also the reason why we can't just run `yarn add xyz` from our project root. We need to specify to which yarn workspace the new library needs to be added, which can be done via the [`yarn workspace {workspace-name} add {library-name}`](https://classic.yarnpkg.com/en/docs/cli/workspace/) command.
 
