docs: updated code references customize existing page element as per the new pattern

--- a/src/pages/docs/page-builder/extending/customize-an-existing-element.mdx
+++ b/src/pages/docs/page-builder/extending/customize-an-existing-element.mdx
@@ -41,13 +41,15 @@ All element plugins are registered as a factory so you can customize them by pas
 ```ts @webiny/app-page-builder/types
 type PbEditorElementPluginArgs = {
   // A function to create an element data structure.
-  create?: (defaultValue) => Record<string, any>
+  create?: (defaultValue: Partial<PbEditorElement>) => PbEditorElement;
   // Array of element settings plugin names.
-  settings?: (defaultValue) => Array<string | Array<string | any>>
+  settings?: (
+      defaultValue: PbEditorPageElementPluginSettings
+  ) => Array<string | Array<string | any>>;
   // A function that return the toolbar properties of the element plugin.
-  toolbar?: (defaultValue) => Record<string, any>
-  elementType?: string
-}
+  toolbar?: (defaultValue: PbEditorPageElementPluginToolbar) => React.ReactNode;
+  elementType?: string;
+};
 ```
 
 ## Add Settings in an Element
@@ -82,8 +84,8 @@ Let's make the following change.
 export default [
   ...
   button({
-    settings: defaultValue => [
-      ...defaultValue,
+    settings: (defaultValue?: string[]) => [
+      ...(Array.isArray(defaultValue) ? defaultValue : []),
       "pb-editor-page-element-style-settings-padding",
       "pb-editor-page-element-style-settings-width"
     ]
